--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <style>
             body { margin: 0; overflow: hidden; }
         </style>
+        <script src="/socket.io/socket.io.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', () => {
                 const canvas = document.getElementById('canvas')
@@ -19,6 +20,8 @@
     <body>
         <canvas id="canvas"></canvas>
         <script>
+            let socket
+
             const fieldWidth  = 30
             const fieldHeight = 30
 
@@ -71,7 +74,9 @@
                 },
             }
 
-            function setup(ctx, w, h) { 
+            function setup(ctx, w, h) {
+                socket = io()
+
                 cellSize = Math.min(w / fieldWidth, h / fieldHeight)
                 fieldScreenWidth  = fieldWidth * cellSize
                 fieldScreenHeight = fieldHeight * cellSize
@@ -108,7 +113,16 @@
                 window.requestAnimationFrame(timestamp => draw(ctx, w, h, timestamp));
             }
             function keyDown(key) {
-                // TODO: добавить код обработки нажатия на клавиши
+                // 'w', 'a', 's', 'd'
+                switch (key) {
+                case 'w':
+                case 'a':
+                case 's':
+                case 'd':
+                case ' ':
+                    socket.emit('cmd', key);
+                    break;
+                }
             }
         </script>
     </body>
